fix footer mobile gap

--- a/src/app/[locale]/global.css
+++ b/src/app/[locale]/global.css
@@ -316,6 +316,7 @@ html {
   min-height: 100dvh;
   display: flex;
   flex-direction: column;
+  @apply gap-100;
 }
 
 .grey {
